# skin_classification_segmentation_DL

./: .gitignore  README.md  explanation.md  pyproject.toml  requirements.txt
data/: README.md
docs/: Abstract Format for Mini Project-2025-26.docx  miniproject abstract new.docx
scripts/: prepare_isic2016.py  smoke_test.py
src/skin_cancer_dl/: __init__.py  api.py  datasets.py  evaluate.py  inference.py  losses.py  models.py  predict.py  train_classifier.py  train_segmentation.py  utils.py  xai.py
src/skin_cancer_dl/static/: app.js  index.html  styles.css
