[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skin-cancer-dl"
version = "0.1.0"
description = "PyTorch pipeline for skin lesion segmentation, classification, and Grad-CAM explainability."
requires-python = ">=3.9"
dependencies = [
  "torch>=2.1",
  "torchvision>=0.16",
  "opencv-python>=4.8",
  "numpy>=1.24",
  "pillow>=10.0",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "python-multipart>=0.0.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
skin_cancer_dl = ["static/*"]
